--- a/src/App.scss
+++ b/src/App.scss
@@ -294,15 +294,17 @@ ul {
               }
 
             button{
-                position: absolute;
                 min-width: 100px;   /* 🦄min-width없으면 버튼이 너무 작아서 넣음.  */
                 width: fit-content;   /* 🦄width: fit-content; */
                 height: 50px;
                 padding: 10px;
+                
+                position: absolute;
                 top: 0;
                 bottom: 0;
                 left: 0;
                 right: 0;
+
                 margin: auto;
                 cursor: pointer;
                 border: none;
@@ -678,63 +680,77 @@ ul {
             }
         }
     }
-    
-#CartPage{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 0px;
 
-    .left{
- 
-        .items-wrap{
-      
-          
-            .thumbnail-container{
-                width: 150px;
-                height: 150px;
-    
-                img{                    
-                    width: 100%;
+    #categories{
+        .parent{
+            div{
+                button{
+                    // width: 30px;
+                    min-width: 10px;
+                    padding: 0px;
+                    // background-color: yellow; 
+                    font-size: 10px;
                 }
             }
+        }
+    }
+    
+    #CartPage{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 0px;
+
+        .left{
+    
+            .items-wrap{
+        
             
-            .btn-container{
-                display: flex;     
-                gap: 10px;
-                .cartBtn{
-                    width: 5px;    
-           
-                    .mui-icon{
-                        font-size: 16px;
+                .thumbnail-container{
+                    width: 150px;
+                    height: 150px;
+        
+                    img{                    
+                        width: 100%;
                     }
                 }
-            }   
-        } 
+                
+                .btn-container{
+                    display: flex;     
+                    gap: 10px;
+                    .cartBtn{
+                        width: 5px;    
+            
+                        .mui-icon{
+                            font-size: 16px;
+                        }
+                    }
+                }   
+            } 
 
-    }
-    .right{
-        flex: 1;
-        padding-top: 10vh;
+        }
+        .right{
+            flex: 1;
+            padding-top: 10vh;
 
-        .totalPrice{
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
+            .totalPrice{
+                display: flex;
+                flex-direction: column;
+                gap: 10px;
+                .btn-container{
+                    display: flex;
+                    gap: 5px;
+                }
+            }
+
             .btn-container{
                 display: flex;
-                gap: 5px;
+                flex-direction: column;
+                justify-content: center;
             }
         }
-
-        .btn-container{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-        }
     }
-}
 
 
     
@@ -764,6 +780,15 @@ ul {
       }
     #slider{   
         max-width: 400px;
+    }
+}
+
+@media (max-width:400px) {
+    body {
+        max-width: 350px;    
+      }
+    #slider{   
+        max-width: 350px;
     }
 }
 
