--- a/src/App.scss
+++ b/src/App.scss
@@ -78,6 +78,7 @@ ul {
 // ---------------🍀footer--------------
 #footer{
     // margin: 100px 200px 20px 200px;
+    padding-top: 5rem;
     .top{
         display: flex;
         gap: 50px;
